unpackaged/main/default/objects/fferpcore__ExchangeRateHistory__c/fferpcore__ExchangeRateHistory__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__ExchangeRateHistoryHelp</customHelpPage>
    <description>Stores a log of changes to exchange rate details.</description>
    <label>Exchange Rate History</label>
    <nameField>
        <displayFormat>ERH-{0000000000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>