unpackaged/main/default/objects/fferpcore__ExchangeRateHistory__c/fields/fferpcore__RateCurrency__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RateCurrency__c</fullName>
    <description>The currency ISO code for the exchange rate.</description>
    <inlineHelpText>The currency ISO code for the exchange rate.</inlineHelpText>
    <label>Rate Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>