unpackaged/main/default/objects/fferpcore__ExchangeRateHistory__c/fields/fferpcore__RateType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RateType__c</fullName>
    <description>The type of exchange rate.</description>
    <label>Rate Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>