unpackaged/main/default/objects/fferpcore__ExchangeRateHistory__c/fields/fferpcore__RelativeCurrency__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RelativeCurrency__c</fullName>
    <description>The default currency for the related group.</description>
    <formula>LEFT(TEXT(fferpcore__Group__r.fferpcore__DefaultCurrency__c), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relative Currency</label>
    <type>Text</type>
</CustomField>