unpackaged/main/default/objects/fferpcore__ExchangeRateHistory__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Group__c</columns>
    <columns>fferpcore__RateType__c</columns>
    <columns>fferpcore__RelativeCurrency__c</columns>
    <columns>fferpcore__RateCurrency__c</columns>
    <columns>fferpcore__Rate__c</columns>
    <columns>fferpcore__StartDate__c</columns>
    <columns>fferpcore__EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>